deploy: d3eeca1c62e0a3011f7abacf4cd54129c1eb548b

--- a/mission-conops.adoc
+++ b/mission-conops.adoc
@@ -209,6 +209,13 @@ Open ground station beacon monitor to listen for satellite health data packet do
 
 
 
+==== User stories as Use Case Diagram
+
+[plantuml, use-case-diagram, svg]
+....
+include::./use-case-diagram.puml[User Stories as Use Case Diagram]
+....
+
 == Data Structures
 This section covers each data structure type in the *SeaLion Mission Concept of Operations (ConOps)*.
 
