--- a/presentation.adoc
+++ b/presentation.adoc
@@ -4,11 +4,15 @@
 
 by Sean Marquez, Kevin Chiu, Payal Nandi, Bhagatji Jimesh, Patrick Clark, & Robert Borowicz
 
+== Homepage
+
+https://ODU-CGA-CubeSat.github.io/sealion-mission-architecture
+
 == Design Philosophy
 
 The {presentation_title} follows a https://www.writethedocs.org/guide/docs-as-code/[docs-as-code] & https://www.writethedocs.org/videos/portland/2019/lessons-learned-in-a-year-of-docs-driven-development-jessica-parsons/[docs-driven development] approach, as to ensure:
 
-* Documentation and development are tightly coupled
+* Documentation and development are tightly coupled.
 * No requirement or feature goes undocumented.
 
 == Stakeholder Needs
