--- a/sealion-mission-architecture.adoc
+++ b/sealion-mission-architecture.adoc
@@ -240,6 +240,7 @@ longitude: {{longitude}}
 ----
 
 .Satellite Health Data Packet Specification
+[cols="1,1,1,5,1"]
 |===
 |Field |Type |Item Type |Description |Source
 
