deploy: 4941d743ede53633d1abbd76ed7d2b3a604ba169

--- a/sealion-mission-architecture.adoc
+++ b/sealion-mission-architecture.adoc
@@ -479,3 +479,10 @@ longitude: {{longitude}}
 
 
 
+
+== Finite State Machine
+
+[plantuml, fsm, svg]
+....
+include::./operating-mode-as-fsm.puml[Finite State Machine]
+....
