--- a/presentation.adoc
+++ b/presentation.adoc
@@ -103,7 +103,7 @@ The SeaLion mission shall qualify a CubeSat bus architecture for very-low Earth 
 
 === 3.3: Tertiary Mission Objective C3
 ****
-The SeaLion shall verify DeCS in-orbit behavior performance via accelerometer & temperature sensor data
+The SeaLion shall verify DeCS in-orbit behavior performance.
 **** 
 
 
@@ -237,6 +237,218 @@ Request satellite AODS sensor data for verifying AODS sensor data corresponds wi
 
 
 * xref:{doc-name}#_4_request_telemetry_data[Request Telemetry Data]
+
+
+
+
+
+=== 5: Payload Scheduler
+
+****
+As a *Ground Station Operator* I want to *schedule data collection to occur at specfied orbital position* so that I can *allow satellite mission modes to autonomously record data*.
+****
+
+==== Example:
+
+
+
+
+
+
+=== 5.1: Deployable Composite Structure (DeCS) Payload Scheduler
+
+****
+As a *Ground Station Operator* I want to *schedule data collection to occur at specfied orbital position* so that I can *allow satellite mission modes to autonomously record data*.
+****
+
+==== Example:
+
+Schedule data recording at specfic orbital location to another orbital location for Deployable Composite Structure Payload
+
+
+==== *Derived From:*
+
+
+
+
+* xref:{doc-name}#_2_2_secondary_mission_objective_b2[Secondary Mission Objective B2]
+
+
+
+
+* xref:{doc-name}#_3_3_tertiary_mission_objective_c3[Tertiary Mission Objective C3]
+
+
+
+
+
+=== 5.2: Impedance Probe Payload Scheduler
+
+****
+As a *Ground Station Operator* I want to *Schedule data recording at specfic orbital location* so that I can *Recording data for future transmission*.
+****
+
+==== Example:
+
+Schedule data recording at specfic orbital location to another orbital location for impedance probe payload
+
+
+==== *Derived From:*
+
+
+
+
+* xref:{doc-name}#_1_5_primary_mission_objective_a5[Primary Mission Objective A5]
+
+
+
+
+
+=== 5.3: Multi-spectral Sensor Scheduler
+
+****
+As a *Ground Station Operator* I want to *Schedule data recording at specfic orbital location* so that I can *Recording data for future transmission*.
+****
+
+==== Example:
+
+Schedule data recording at specfic orbital location to another orbital location for Multi-spectral Sensor payload
+
+
+==== *Derived From:*
+
+
+
+
+* xref:{doc-name}#_2_1_secondary_mission_objective_b1[Secondary Mission Objective B1]
+
+
+
+
+
+=== 5.4: Downlink Payload Data TLE
+
+****
+As a *Ground Station Operator* I want to *Transmit TLE schedulered satellite recorded data to ground station* so that I can *Vacant on-board memory for more data*.
+****
+
+==== Example:
+
+Start downlink TLE schedulered payload data once the satellite is in line of sight
+
+
+==== *Derived From:*
+
+
+
+
+* xref:{doc-name}#_1_3_primary_mission_objective_a3[Primary Mission Objective A3]
+
+
+
+
+
+=== 6: Payload Scheduler
+
+****
+As a *Ground Station Operator* I want to *Schedule data recording at specfic time interval* so that I can *Recording data for future transmission*.
+****
+
+==== Example:
+
+
+
+
+
+
+=== 6.1: Deployable Composite Structure (DeCS) Payload Scheduler
+
+****
+As a *Ground Station Operator* I want to *Schedule data recording at specfic time interval (or orbital location)* so that I can *Recording data for future transmission*.
+****
+
+==== Example:
+
+Schedule data recording at specfic time interval  for Deployable Composite Structure Payload
+
+
+==== *Derived From:*
+
+
+
+
+* xref:{doc-name}#_2_2_secondary_mission_objective_b2[Secondary Mission Objective B2]
+
+
+
+
+* xref:{doc-name}#_3_3_tertiary_mission_objective_c3[Tertiary Mission Objective C3]
+
+
+
+
+
+=== 6.2: Impedance Probe Payload Scheduler
+
+****
+As a *Ground Station Operator* I want to *Schedule data recording at specfic time interval* so that I can *Recording data for future transmission*.
+****
+
+==== Example:
+
+Schedule data recording at specfic time interval for Impedance Probe Payload
+
+
+==== *Derived From:*
+
+
+
+
+* xref:{doc-name}#_1_5_primary_mission_objective_a5[Primary Mission Objective A5]
+
+
+
+
+
+=== 6.3: Multi-spectral Sensor Payload Scheduler
+
+****
+As a *Ground Station Operator* I want to *Schedule data recording at specfic time interval* so that I can *Recording data for future transmission*.
+****
+
+==== Example:
+
+Schedule data recording at specfic time interval for Multi-spectral Sensor Payload
+
+
+==== *Derived From:*
+
+
+
+
+* xref:{doc-name}#_2_1_secondary_mission_objective_b1[Secondary Mission Objective B1]
+
+
+
+
+
+=== 6.4: Downlink Payload Data Time Interval
+
+****
+As a *Ground Station Operator* I want to *Transmit time interval schedulered satellite recorded data to ground station* so that I can *Vacant on-board memory for more data*.
+****
+
+==== Example:
+
+Start downlink time interval schedulered payload Data once the satellite is in line of sight
+
+
+==== *Derived From:*
+
+
+
+
+* xref:{doc-name}#_1_3_primary_mission_objective_a3[Primary Mission Objective A3]
 
 
 
